// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Carousel 1 photo 1`] = `
.c5 {
  padding: 8px;
}

.c5 * {
  width: 100%;
  border-radius: 20px;
  box-shadow: 0px 4px 8px 0px rgba(0,0,0,0.08);
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c0 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  display: grid;
  grid-template-columns: 1fr 10fr 1fr;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c3 {
  width: 100%;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-transition: all 250ms linear;
  transition: all 250ms linear;
  -ms-overflow-style: none;
  -webkit-scrollbar-width: none;
  -moz-scrollbar-width: none;
  -ms-scrollbar-width: none;
  scrollbar-width: none;
  -webkit-transform: translateX( -NaN% );
  -ms-transform: translateX( -NaN% );
  transform: translateX( -NaN% );
}

.c3 > * {
  width: NaN%;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c3::-webkit-scrollbar {
  display: none;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-right: 16px;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: 16px;
}

<div
  style={
    Object {
      "marginLeft": "auto",
      "marginRight": "auto",
      "marginTop": 64,
    }
  }
>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      <div
        className="c2"
        direction="left"
      />
      <div
        style={
          Object {
            "overflow": "hidden",
          }
        }
      >
        <div
          className="c3"
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          onTransitionEnd={[Function]}
        >
          <div
            className="c4"
          >
            <div
              className="c5"
            >
              <img
                alt="Organic Pepper"
                src="https://picsum.photos/640/?image=1080"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        className="c6"
        direction="right"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Carousel 2 photos 1`] = `
.c5 {
  padding: 8px;
}

.c5 * {
  width: 100%;
  border-radius: 20px;
  box-shadow: 0px 4px 8px 0px rgba(0,0,0,0.08);
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c0 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  display: grid;
  grid-template-columns: 1fr 10fr 1fr;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c3 {
  width: 100%;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-transition: all 250ms linear;
  transition: all 250ms linear;
  -ms-overflow-style: none;
  -webkit-scrollbar-width: none;
  -moz-scrollbar-width: none;
  -ms-scrollbar-width: none;
  scrollbar-width: none;
  -webkit-transform: translateX( -0% );
  -ms-transform: translateX( -0% );
  transform: translateX( -0% );
}

.c3 > * {
  width: 50%;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c3::-webkit-scrollbar {
  display: none;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-right: 16px;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: 16px;
}

<div
  style={
    Object {
      "marginLeft": "auto",
      "marginRight": "auto",
      "marginTop": 64,
    }
  }
>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      <div
        className="c2"
        direction="left"
      />
      <div
        style={
          Object {
            "overflow": "hidden",
          }
        }
      >
        <div
          className="c3"
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          onTransitionEnd={[Function]}
        >
          <div
            className="c4"
          >
            <div
              className="c5"
            >
              <img
                alt="Organic Pepper"
                src="https://picsum.photos/640/?image=1080"
              />
            </div>
          </div>
          <div
            className="c4"
          >
            <div
              className="c5"
            >
              <img
                alt="Tomato"
                src="https://picsum.photos/640/?image=824"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        className="c6"
        direction="right"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Carousel Custom carousel 1`] = `
.c5 {
  display: inline-block;
  vertical-align: text-bottom;
}

.c5 .farmblocks-icon {
  display: block;
}

.c3 {
  font-size: 16px;
  font-family: lato,sans-serif;
  font-weight: 600;
  -webkit-font-smoothing: antialiased !important;
  -moz-osx-font-smoothing: grayscale;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 4px 4px;
  border-radius: 4px;
  line-height: 1.5;
  height: 40px;
  min-width: 40px;
  width: 40px;
  white-space: nowrap;
  cursor: pointer;
  -webkit-transition: background 0.3s,color 0.3s,border-color 0.3s;
  transition: background 0.3s,color 0.3s,border-color 0.3s;
  background-color: #FFFFFF;
  color: #59636f;
  border: solid 1px rgba(0,0,0,0.16);
  box-shadow: 0px 2px 2px 0px rgba(0,0,0,0.16);
}

.c3 span {
  overflow: hidden;
  text-overflow: ellipsis;
}

.c3:disabled {
  background-color: rgba(0,0,0,0.32);
  color: rgba(0,0,0,0.32);
  border-width: 1px;
  border-color: rgba(0,0,0,0.16);
  box-shadow: none;
  cursor: default;
}

.c3:disabled .icon {
  color: rgba(0,0,0,0.32);
}

.c3 .icon {
  -webkit-transition: color 0.3s ease;
  transition: color 0.3s ease;
  color: rgba(0,0,0,0.32);
  line-height: 1;
}

.c3:not(:disabled):hover,
.c3:not(:disabled).hovered,
.c3:not(:disabled):active,
.c3:not(:disabled).active {
  color: #3498db;
  border-width: 2px;
  border-color: #3498db;
  box-shadow: 0px 4px 4px 0px rgba(0,0,0,0.16);
  padding: 3px 3px;
}

.c3:not(:disabled):hover .icon,
.c3:not(:disabled).hovered .icon,
.c3:not(:disabled):active .icon,
.c3:not(:disabled).active .icon,
.c3:not(:disabled):focus .icon,
.c3:not(:disabled).focused .icon {
  color: #3498db;
}

.c3:not(:disabled).active,
.c3:not(:disabled):active {
  box-shadow: none;
}

.c3:focus,
.c3.focused {
  outline: none;
}

.c3.focus-visible,
.c3.focused:not(:disabled) {
  box-shadow: 0 0 0 3px rgba(52,152,219,0.56);
}

.c8 {
  padding: 8px;
}

.c8 * {
  width: 100%;
  border-radius: 500px;
  box-shadow: 0px 4px 8px 0px rgba(0,0,0,0.08);
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c0 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  display: grid;
  grid-template-columns: 1fr 10fr 1fr;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c6 {
  width: 100%;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-transition: all 250ms linear;
  transition: all 250ms linear;
  -ms-overflow-style: none;
  -webkit-scrollbar-width: none;
  -moz-scrollbar-width: none;
  -ms-scrollbar-width: none;
  scrollbar-width: none;
  -webkit-transform: translateX( -100% );
  -ms-transform: translateX( -100% );
  transform: translateX( -100% );
}

.c6 > * {
  width: 50%;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c6::-webkit-scrollbar {
  display: none;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-right: 16px;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: 16px;
}

.c4 {
  border-radius: 32px;
}

.c10 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c11 {
  height: 8px;
  width: 8px;
  margin-right: 6px;
  cursor: pointer;
  border-radius: 50%;
  background: rgba(0,0,0,0.08);
}

.c11.active {
  background: rgba(0,0,0,0.48);
}

@media (hover:none) and (pointer:coarse) {
  .c4 {
    display: none;
  }
}

<div
  style={
    Object {
      "height": 800,
      "marginLeft": "auto",
      "marginRight": "auto",
      "marginTop": 64,
      "width": 800,
    }
  }
>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      <div
        className="c2"
        direction="left"
      >
        <button
          className="c3 c4   "
          data-testid="left-arrow"
          onClick={[Function]}
          style={
            Object {
              "borderRadius": "0px",
            }
          }
          type="button"
        >
          <div
            className="icon left-icon"
            style={
              Object {
                "transform": "translateX(-0px)",
              }
            }
          >
            <span
              className="c5"
              color="currentColor"
              size="1em"
            >
              <svg
                aria-hidden={true}
                className="farmblocks-icon "
                height={22}
                viewBox="4 4 32 32"
                width={22}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M16.57 21l4.106 3.763a1 1 0 11-1.352 1.474l-6-5.5a1 1 0 010-1.474l6-5.5a1 1 0 111.352 1.474L16.57 19H26a1 1 0 010 2h-9.43z"
                  fill="currentColor"
                  fillRule="nonzero"
                />
              </svg>
            </span>
          </div>
          <span />
        </button>
      </div>
      <div
        style={
          Object {
            "overflow": "hidden",
          }
        }
      >
        <div
          className="c6"
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          onTransitionEnd={[Function]}
        >
          <div
            className="c7"
          >
            <div
              className="c8"
            >
              <img
                alt="Tomato"
                src="https://picsum.photos/640/?image=75"
              />
            </div>
          </div>
          <div
            className="c7"
          >
            <div
              className="c8"
            >
              <img
                alt="Romaine Lettuce"
                src="https://picsum.photos/640/?image=766"
              />
            </div>
          </div>
          <div
            className="c7"
          >
            <div
              className="c8"
            >
              <img
                alt="Organic Pepper"
                src="https://picsum.photos/640/?image=1080"
              />
            </div>
          </div>
          <div
            className="c7"
          >
            <div
              className="c8"
            >
              <img
                alt="Tomato"
                src="https://picsum.photos/640/?image=824"
              />
            </div>
          </div>
          <div
            className="c7"
          >
            <div
              className="c8"
            >
              <img
                alt="Grapefruit"
                src="https://picsum.photos/640/?image=889"
              />
            </div>
          </div>
          <div
            className="c7"
          >
            <div
              className="c8"
            >
              <img
                alt="Tomato"
                src="https://picsum.photos/640/?image=674"
              />
            </div>
          </div>
          <div
            className="c7"
          >
            <div
              className="c8"
            >
              <img
                alt="Tomato"
                src="https://picsum.photos/640/?image=292"
              />
            </div>
          </div>
          <div
            className="c7"
          >
            <div
              className="c8"
            >
              <img
                alt="Tomato"
                src="https://picsum.photos/640/?image=517"
              />
            </div>
          </div>
          <div
            className="c7"
          >
            <div
              className="c8"
            >
              <img
                alt="Tomato"
                src="https://picsum.photos/640/?image=627"
              />
            </div>
          </div>
          <div
            className="c7"
          >
            <div
              className="c8"
            >
              <img
                alt="Tomato"
                src="https://picsum.photos/640/?image=75"
              />
            </div>
          </div>
          <div
            className="c7"
          >
            <div
              className="c8"
            >
              <img
                alt="Romaine Lettuce"
                src="https://picsum.photos/640/?image=766"
              />
            </div>
          </div>
          <div
            className="c7"
          >
            <div
              className="c8"
            >
              <img
                alt="Organic Pepper"
                src="https://picsum.photos/640/?image=1080"
              />
            </div>
          </div>
          <div
            className="c7"
          >
            <div
              className="c8"
            >
              <img
                alt="Tomato"
                src="https://picsum.photos/640/?image=824"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        className="c9"
        direction="right"
      >
        <button
          className="c3 c4   "
          data-testid="right-arrow"
          onClick={[Function]}
          style={
            Object {
              "borderRadius": "0px",
            }
          }
          type="button"
        >
          <div
            className="icon left-icon"
            style={
              Object {
                "transform": "translateX(-0px)",
              }
            }
          >
            <span
              className="c5"
              color="currentColor"
              size="1em"
            >
              <svg
                aria-hidden={true}
                className="farmblocks-icon "
                height={22}
                viewBox="4 4 32 32"
                width={22}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M20.676 13.763l6 5.5a1 1 0 010 1.474l-6 5.5a1 1 0 11-1.352-1.474L23.43 21H14a1 1 0 010-2h9.429l-4.105-3.763a1 1 0 111.352-1.474z"
                  fill="currentColor"
                  fillRule="nonzero"
                />
              </svg>
            </span>
          </div>
          <span />
        </button>
      </div>
    </div>
    <div
      className="c10"
      data-testid="dots-container"
    >
      <span
        className="c11 active"
        onClick={[Function]}
      />
      <span
        className="c11"
        onClick={[Function]}
      />
      <span
        className="c11"
        onClick={[Function]}
      />
      <span
        className="c11"
        onClick={[Function]}
      />
      <span
        className="c11"
        onClick={[Function]}
      />
      <span
        className="c11"
        onClick={[Function]}
      />
      <span
        className="c11"
        onClick={[Function]}
      />
      <span
        className="c11"
        onClick={[Function]}
      />
      <span
        className="c11"
        onClick={[Function]}
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Carousel all photos 1`] = `
.c9 {
  display: inline-block;
  vertical-align: text-bottom;
}

.c9 .farmblocks-icon {
  display: block;
}

.c7 {
  font-size: 16px;
  font-family: lato,sans-serif;
  font-weight: 600;
  -webkit-font-smoothing: antialiased !important;
  -moz-osx-font-smoothing: grayscale;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 4px 4px;
  border-radius: 4px;
  line-height: 1.5;
  height: 40px;
  min-width: 40px;
  width: 40px;
  white-space: nowrap;
  cursor: pointer;
  -webkit-transition: background 0.3s,color 0.3s,border-color 0.3s;
  transition: background 0.3s,color 0.3s,border-color 0.3s;
  background-color: #FFFFFF;
  color: #59636f;
  border: solid 1px rgba(0,0,0,0.16);
  box-shadow: 0px 2px 2px 0px rgba(0,0,0,0.16);
}

.c7 span {
  overflow: hidden;
  text-overflow: ellipsis;
}

.c7:disabled {
  background-color: rgba(0,0,0,0.32);
  color: rgba(0,0,0,0.32);
  border-width: 1px;
  border-color: rgba(0,0,0,0.16);
  box-shadow: none;
  cursor: default;
}

.c7:disabled .icon {
  color: rgba(0,0,0,0.32);
}

.c7 .icon {
  -webkit-transition: color 0.3s ease;
  transition: color 0.3s ease;
  color: rgba(0,0,0,0.32);
  line-height: 1;
}

.c7:not(:disabled):hover,
.c7:not(:disabled).hovered,
.c7:not(:disabled):active,
.c7:not(:disabled).active {
  color: #3498db;
  border-width: 2px;
  border-color: #3498db;
  box-shadow: 0px 4px 4px 0px rgba(0,0,0,0.16);
  padding: 3px 3px;
}

.c7:not(:disabled):hover .icon,
.c7:not(:disabled).hovered .icon,
.c7:not(:disabled):active .icon,
.c7:not(:disabled).active .icon,
.c7:not(:disabled):focus .icon,
.c7:not(:disabled).focused .icon {
  color: #3498db;
}

.c7:not(:disabled).active,
.c7:not(:disabled):active {
  box-shadow: none;
}

.c7:focus,
.c7.focused {
  outline: none;
}

.c7.focus-visible,
.c7.focused:not(:disabled) {
  box-shadow: 0 0 0 3px rgba(52,152,219,0.56);
}

.c5 {
  padding: 8px;
}

.c5 * {
  width: 100%;
  border-radius: 20px;
  box-shadow: 0px 4px 8px 0px rgba(0,0,0,0.08);
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c0 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  display: grid;
  grid-template-columns: 1fr 10fr 1fr;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c3 {
  width: 100%;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-transition: all 250ms linear;
  transition: all 250ms linear;
  -ms-overflow-style: none;
  -webkit-scrollbar-width: none;
  -moz-scrollbar-width: none;
  -ms-scrollbar-width: none;
  scrollbar-width: none;
  -webkit-transform: translateX( -0% );
  -ms-transform: translateX( -0% );
  transform: translateX( -0% );
}

.c3 > * {
  width: 25%;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c3::-webkit-scrollbar {
  display: none;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-right: 16px;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: 16px;
}

.c8 {
  border-radius: 32px;
}

@media (hover:none) and (pointer:coarse) {
  .c8 {
    display: none;
  }
}

<div
  style={
    Object {
      "marginLeft": "auto",
      "marginRight": "auto",
      "marginTop": 64,
    }
  }
>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      <div
        className="c2"
        direction="left"
      />
      <div
        style={
          Object {
            "overflow": "hidden",
          }
        }
      >
        <div
          className="c3"
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          onTransitionEnd={[Function]}
        >
          <div
            className="c4"
          >
            <div
              className="c5"
            >
              <img
                alt="Organic Pepper"
                src="https://picsum.photos/640/?image=1080"
              />
            </div>
          </div>
          <div
            className="c4"
          >
            <div
              className="c5"
            >
              <img
                alt="Tomato"
                src="https://picsum.photos/640/?image=824"
              />
            </div>
          </div>
          <div
            className="c4"
          >
            <div
              className="c5"
            >
              <img
                alt="Grapefruit"
                src="https://picsum.photos/640/?image=889"
              />
            </div>
          </div>
          <div
            className="c4"
          >
            <div
              className="c5"
            >
              <img
                alt="Tomato"
                src="https://picsum.photos/640/?image=674"
              />
            </div>
          </div>
          <div
            className="c4"
          >
            <div
              className="c5"
            >
              <img
                alt="Tomato"
                src="https://picsum.photos/640/?image=292"
              />
            </div>
          </div>
          <div
            className="c4"
          >
            <div
              className="c5"
            >
              <img
                alt="Tomato"
                src="https://picsum.photos/640/?image=517"
              />
            </div>
          </div>
          <div
            className="c4"
          >
            <div
              className="c5"
            >
              <img
                alt="Tomato"
                src="https://picsum.photos/640/?image=627"
              />
            </div>
          </div>
          <div
            className="c4"
          >
            <div
              className="c5"
            >
              <img
                alt="Tomato"
                src="https://picsum.photos/640/?image=75"
              />
            </div>
          </div>
          <div
            className="c4"
          >
            <div
              className="c5"
            >
              <img
                alt="Romaine Lettuce"
                src="https://picsum.photos/640/?image=766"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        className="c6"
        direction="right"
      >
        <button
          className="c7 c8   "
          data-testid="right-arrow"
          onClick={[Function]}
          type="button"
        >
          <div
            className="icon left-icon"
            style={
              Object {
                "transform": "translateX(-0px)",
              }
            }
          >
            <span
              className="c9"
              color="currentColor"
              size="1em"
            >
              <svg
                aria-hidden={true}
                className="farmblocks-icon "
                height={24}
                viewBox="2 2 20 20"
                width={24}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12.586 12L9.293 8.707a1 1 0 111.414-1.414l4 4a1 1 0 010 1.414l-4 4a1 1 0 11-1.414-1.414L12.586 12z"
                  fill="currentColor"
                  fillRule="evenodd"
                />
              </svg>
            </span>
          </div>
          <span />
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Carousel infinite loop 1`] = `
.c5 {
  display: inline-block;
  vertical-align: text-bottom;
}

.c5 .farmblocks-icon {
  display: block;
}

.c3 {
  font-size: 16px;
  font-family: lato,sans-serif;
  font-weight: 600;
  -webkit-font-smoothing: antialiased !important;
  -moz-osx-font-smoothing: grayscale;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 4px 4px;
  border-radius: 4px;
  line-height: 1.5;
  height: 40px;
  min-width: 40px;
  width: 40px;
  white-space: nowrap;
  cursor: pointer;
  -webkit-transition: background 0.3s,color 0.3s,border-color 0.3s;
  transition: background 0.3s,color 0.3s,border-color 0.3s;
  background-color: #FFFFFF;
  color: #59636f;
  border: solid 1px rgba(0,0,0,0.16);
  box-shadow: 0px 2px 2px 0px rgba(0,0,0,0.16);
}

.c3 span {
  overflow: hidden;
  text-overflow: ellipsis;
}

.c3:disabled {
  background-color: rgba(0,0,0,0.32);
  color: rgba(0,0,0,0.32);
  border-width: 1px;
  border-color: rgba(0,0,0,0.16);
  box-shadow: none;
  cursor: default;
}

.c3:disabled .icon {
  color: rgba(0,0,0,0.32);
}

.c3 .icon {
  -webkit-transition: color 0.3s ease;
  transition: color 0.3s ease;
  color: rgba(0,0,0,0.32);
  line-height: 1;
}

.c3:not(:disabled):hover,
.c3:not(:disabled).hovered,
.c3:not(:disabled):active,
.c3:not(:disabled).active {
  color: #3498db;
  border-width: 2px;
  border-color: #3498db;
  box-shadow: 0px 4px 4px 0px rgba(0,0,0,0.16);
  padding: 3px 3px;
}

.c3:not(:disabled):hover .icon,
.c3:not(:disabled).hovered .icon,
.c3:not(:disabled):active .icon,
.c3:not(:disabled).active .icon,
.c3:not(:disabled):focus .icon,
.c3:not(:disabled).focused .icon {
  color: #3498db;
}

.c3:not(:disabled).active,
.c3:not(:disabled):active {
  box-shadow: none;
}

.c3:focus,
.c3.focused {
  outline: none;
}

.c3.focus-visible,
.c3.focused:not(:disabled) {
  box-shadow: 0 0 0 3px rgba(52,152,219,0.56);
}

.c8 {
  padding: 8px;
}

.c8 * {
  width: 100%;
  border-radius: 20px;
  box-shadow: 0px 4px 8px 0px rgba(0,0,0,0.08);
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c0 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  display: grid;
  grid-template-columns: 1fr 10fr 1fr;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c6 {
  width: 100%;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-transition: all 250ms linear;
  transition: all 250ms linear;
  -ms-overflow-style: none;
  -webkit-scrollbar-width: none;
  -moz-scrollbar-width: none;
  -ms-scrollbar-width: none;
  scrollbar-width: none;
  -webkit-transform: translateX( -100% );
  -ms-transform: translateX( -100% );
  transform: translateX( -100% );
}

.c6 > * {
  width: 33.333333333333336%;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c6::-webkit-scrollbar {
  display: none;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-right: 16px;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: 16px;
}

.c4 {
  border-radius: 32px;
}

.c10 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c11 {
  height: 8px;
  width: 8px;
  margin-right: 6px;
  cursor: pointer;
  border-radius: 50%;
  background: rgba(0,0,0,0.08);
}

.c11.active {
  background: rgba(0,0,0,0.48);
}

@media (hover:none) and (pointer:coarse) {
  .c4 {
    display: none;
  }
}

<div
  style={
    Object {
      "marginLeft": "auto",
      "marginRight": "auto",
      "marginTop": 64,
    }
  }
>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      <div
        className="c2"
        direction="left"
      >
        <button
          className="c3 c4   "
          data-testid="left-arrow"
          onClick={[Function]}
          type="button"
        >
          <div
            className="icon left-icon"
            style={
              Object {
                "transform": "translateX(-0px)",
              }
            }
          >
            <span
              className="c5"
              color="currentColor"
              size="1em"
            >
              <svg
                aria-hidden={true}
                className="farmblocks-icon "
                height={24}
                viewBox="2 2 20 20"
                width={24}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M11.414 12l3.293 3.293a1 1 0 01-1.414 1.414l-4-4a1 1 0 010-1.414l4-4a1 1 0 011.414 1.414L11.414 12z"
                  fill="currentColor"
                  fillRule="evenodd"
                />
              </svg>
            </span>
          </div>
          <span />
        </button>
      </div>
      <div
        style={
          Object {
            "overflow": "hidden",
          }
        }
      >
        <div
          className="c6"
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          onTransitionEnd={[Function]}
        >
          <div
            className="c7"
          >
            <div
              className="c8"
            >
              <img
                alt="Tomato"
                src="https://picsum.photos/640/?image=627"
              />
            </div>
          </div>
          <div
            className="c7"
          >
            <div
              className="c8"
            >
              <img
                alt="Tomato"
                src="https://picsum.photos/640/?image=75"
              />
            </div>
          </div>
          <div
            className="c7"
          >
            <div
              className="c8"
            >
              <img
                alt="Romaine Lettuce"
                src="https://picsum.photos/640/?image=766"
              />
            </div>
          </div>
          <div
            className="c7"
          >
            <div
              className="c8"
            >
              <img
                alt="Organic Pepper"
                src="https://picsum.photos/640/?image=1080"
              />
            </div>
          </div>
          <div
            className="c7"
          >
            <div
              className="c8"
            >
              <img
                alt="Tomato"
                src="https://picsum.photos/640/?image=824"
              />
            </div>
          </div>
          <div
            className="c7"
          >
            <div
              className="c8"
            >
              <img
                alt="Grapefruit"
                src="https://picsum.photos/640/?image=889"
              />
            </div>
          </div>
          <div
            className="c7"
          >
            <div
              className="c8"
            >
              <img
                alt="Tomato"
                src="https://picsum.photos/640/?image=674"
              />
            </div>
          </div>
          <div
            className="c7"
          >
            <div
              className="c8"
            >
              <img
                alt="Tomato"
                src="https://picsum.photos/640/?image=292"
              />
            </div>
          </div>
          <div
            className="c7"
          >
            <div
              className="c8"
            >
              <img
                alt="Tomato"
                src="https://picsum.photos/640/?image=517"
              />
            </div>
          </div>
          <div
            className="c7"
          >
            <div
              className="c8"
            >
              <img
                alt="Tomato"
                src="https://picsum.photos/640/?image=627"
              />
            </div>
          </div>
          <div
            className="c7"
          >
            <div
              className="c8"
            >
              <img
                alt="Tomato"
                src="https://picsum.photos/640/?image=75"
              />
            </div>
          </div>
          <div
            className="c7"
          >
            <div
              className="c8"
            >
              <img
                alt="Romaine Lettuce"
                src="https://picsum.photos/640/?image=766"
              />
            </div>
          </div>
          <div
            className="c7"
          >
            <div
              className="c8"
            >
              <img
                alt="Organic Pepper"
                src="https://picsum.photos/640/?image=1080"
              />
            </div>
          </div>
          <div
            className="c7"
          >
            <div
              className="c8"
            >
              <img
                alt="Tomato"
                src="https://picsum.photos/640/?image=824"
              />
            </div>
          </div>
          <div
            className="c7"
          >
            <div
              className="c8"
            >
              <img
                alt="Grapefruit"
                src="https://picsum.photos/640/?image=889"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        className="c9"
        direction="right"
      >
        <button
          className="c3 c4   "
          data-testid="right-arrow"
          onClick={[Function]}
          type="button"
        >
          <div
            className="icon left-icon"
            style={
              Object {
                "transform": "translateX(-0px)",
              }
            }
          >
            <span
              className="c5"
              color="currentColor"
              size="1em"
            >
              <svg
                aria-hidden={true}
                className="farmblocks-icon "
                height={24}
                viewBox="2 2 20 20"
                width={24}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12.586 12L9.293 8.707a1 1 0 111.414-1.414l4 4a1 1 0 010 1.414l-4 4a1 1 0 11-1.414-1.414L12.586 12z"
                  fill="currentColor"
                  fillRule="evenodd"
                />
              </svg>
            </span>
          </div>
          <span />
        </button>
      </div>
    </div>
    <div
      className="c10"
      data-testid="dots-container"
    >
      <span
        className="c11 active"
        onClick={[Function]}
      />
      <span
        className="c11"
        onClick={[Function]}
      />
      <span
        className="c11"
        onClick={[Function]}
      />
      <span
        className="c11"
        onClick={[Function]}
      />
      <span
        className="c11"
        onClick={[Function]}
      />
      <span
        className="c11"
        onClick={[Function]}
      />
      <span
        className="c11"
        onClick={[Function]}
      />
      <span
        className="c11"
        onClick={[Function]}
      />
      <span
        className="c11"
        onClick={[Function]}
      />
    </div>
  </div>
</div>
`;
